--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/login_sms_code_lay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_20"
@@ -145,14 +146,13 @@
                     android:visibility="visible">
 
                     <View
-                        android:id="@+id/login_code_divider"
                         android:layout_width="@dimen/dp_0_5"
                         android:layout_height="match_parent"
                         android:background="@color/divider" />
 
                     <TextView
                         android:id="@+id/login_send_sms_tv"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:paddingLeft="@dimen/dp_10"
@@ -161,11 +161,11 @@
                         android:paddingBottom="@dimen/dp_6"
                         android:singleLine="true"
                         android:text="获取验证码"
-                        android:textColor="@color/grayText"
+                        android:textColor="@color/colorAccent"
                         android:textSize="@dimen/sp_14" />
                     <ImageView
                         android:id="@+id/login_img_code_iv"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:visibility="gone"
                         android:gravity="center" />
@@ -193,7 +193,7 @@
                 android:layout_marginTop="@dimen/dp_20"
                 android:layout_marginRight="@dimen/dp_20"
                 android:layout_marginBottom="@dimen/dp_20"
-                android:background="@drawable/gray_bg_shape"
+                android:background="@drawable/blue_bg_shape"
                 android:gravity="center"
                 android:minHeight="0dp"
                 android:paddingTop="@dimen/dp_14"
