--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -174,6 +174,33 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="@dimen/dp_5"
                 android:paddingHorizontal="@dimen/dp_20">
+                <CheckedTextView
+                    android:id="@+id/setting_message_setting_tv"
+                    android:layout_width="@dimen/dp_0"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_5"
+                    android:singleLine="true"
+                    android:text="消息推送"
+                    android:textColor="@color/black1"
+                    android:textSize="@dimen/sp_13"
+                    android:gravity="center"
+                    android:checked="true"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:layout_marginHorizontal="@dimen/dp_17"
+                android:background="@color/divider2" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="@dimen/dp_5"
+                android:paddingHorizontal="@dimen/dp_20">
                 <TextView
                     android:id="@+id/setting_log_off_tv"
                     android:layout_width="match_parent"
